# rustyFTP

./: .env  Cargo.toml  README.md
src/: ftp_operations.rs  main.rs
